--- a/app/views/enforcement-statement/v1/update/reasons-e.html
+++ b/app/views/enforcement-statement/v1/update/reasons-e.html
@@ -19,7 +19,7 @@
           html: 'Copies of the enforcement notice were not legally served to the right people.'
         }) }}
 
-        <p>You do not need to repeat the local planning department&rsquo;s reasons for issuing the enforcement notice.</p>
+        <p>You do not need to repeat the local planning authority&rsquo;s reasons for issuing the enforcement notice.</p>
 
         <p>You can upload documents to support your statement later.</p>
 
@@ -30,7 +30,7 @@
           maxwords: '3000',
           rows: 10,
           label: {
-            html: 'What are your reasons for choosing Ground B?',
+            html: 'What are your reasons for choosing Ground E?',
             classes: 'govuk-label--m govuk-!-margin-top-8',
             isPageHeading: false
           }
