--- a/app/views/enforcement-statement/v1/update/reasons-b.html
+++ b/app/views/enforcement-statement/v1/update/reasons-b.html
@@ -19,7 +19,7 @@
           html: 'The alleged breach of planning permission has not happened.'
         }) }}
 
-        <p>You do not need to repeat the local planning department&rsquo;s reasons for issuing the enforcement notice.</p>
+        <p>You do not need to repeat the local planning authority&rsquo;s reasons for issuing the enforcement notice.</p>
 
         <p>You can upload documents to support your statement later.</p>
 
