Added MOJ file upload and integrated into statement supporting docs

--- a/app/views/enforcement-statement/v1/appeal-submitted-email.html
+++ b/app/views/enforcement-statement/v1/appeal-submitted-email.html
@@ -4,7 +4,7 @@
   <p>
     <strong>Subject:</strong> Your appeal is in progress - 9617 The Avenue, XM26 7YS
     <br>
-    <strong>From:</strong> Appeal a planning decision
+    <strong>From:</strong> Appeal an enforcement notice
   </p>
 
   <img src="{{ asset_path }}images/pi-logo.png" width="150" class="govuk-!-margin-top-5"/>
