--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -182,3 +182,19 @@ $govuk-assets-path: '/govuk/assets/';
 		}
 	}
 }
+
+// Modify the moj multi upload drop styles
+.moj-multi-file-upload__dropzone {
+	outline-color: $govuk-link-colour;
+	outline-width: 4px;
+
+	@include govuk-media-query($from: desktop) {
+		padding: 80px 15px;
+	}
+}
+
+.moj-multi-file-upload--dragover {
+	background-color: #f1f1f1;
+	color: $govuk-focus-text-colour;
+	outline-color: $govuk-focus-colour;
+}
