--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -30,6 +30,7 @@
 {% from "govuk/components/tag/macro.njk"                 import govukTag %}
 {% from "govuk/components/textarea/macro.njk"            import govukTextarea %}
 {% from "govuk/components/warning-text/macro.njk"        import govukWarningText %}
+{%- from "moj/components/multi-file-upload/macro.njk" import mojMultiFileUpload -%}
 
 {% block head %}
   {% include "includes/head.html" %}
