Added date rather than 6 weeks

--- a/app/views/enforcement-statement/v1/update/index.html
+++ b/app/views/enforcement-statement/v1/update/index.html
@@ -14,7 +14,7 @@
         Update your appeal statement
       </h1>
 
-      <p>You can revisit your appeal statement any number of times up to 6 weeks after your appeal start date.</p>
+      <p>You can revisit your appeal statement any number of times before 11.59pm on Monday {{ 35 | daysInFuture }}.</p>
 
       <p class="govuk-!-margin-bottom-9">You can change your grounds of appeal (apart from ground A), and add other reasons, comments and documents to support your appeal.</p>
     </div>
