Enforcement appeal - return of intent date

--- a/app/views/before-you-start/v12/appeal-intent.html
+++ b/app/views/before-you-start/v12/appeal-intent.html
@@ -45,11 +45,11 @@
         },
         items: [
           {
-            value: "intent",
+            value: "Yes",
             text: "Yes, I did submit an intent to appeal"
           },
           {
-            value: "nointent",
+            value: "No",
             text: "No, I did not submit an intent to appeal"
           }
         ]
