--- a/app/views/before-you-start/v12/check-answers.html
+++ b/app/views/before-you-start/v12/check-answers.html
@@ -121,7 +121,22 @@
             </dd>
           </div>
 
-          {% if data['intent'] %}
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Intent to appeal submitted
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ data['enforcement-intent'] }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="notice-decision-date">
+                Change<span class="govuk-visually-hidden"> intent to appeal submitted</span>
+              </a>
+            </dd>
+          </div>
+
+          {% if data['enforcement-intent'] == 'Yes' %}
+
             <div class="govuk-summary-list__row">
               <dt class="govuk-summary-list__key">
                 Intent to appeal submitted date
@@ -141,6 +156,7 @@
                 </a>
               </dd>
             </div>
+
           {% endif %}
 
         </dl>
