--- a/app/views/enforcement-statement/v1/update/supporting-upload-b.html
+++ b/app/views/enforcement-statement/v1/update/supporting-upload-b.html
@@ -12,15 +12,15 @@
     <div class="govuk-grid-column-two-thirds">
       <form method="post" id="multiupload">
         <h1 class="govuk-heading-l">
-          Supporting documents
+          Ground B supporting documents
         </h1>
 
-        <p>You can upload your reasons, comments or site plans </p>
+        <p>You can upload your reasons, comments or site plans.</p>
 
         {% set uploadHtml %}
           {{ govukFileUpload({
-            id: "statement-supporting-docs",
-            name: "_statement-supporting-docs",
+            id: "statement-supporting-docs-b",
+            name: "_statement-supporting-docs-b",
             classes: 'moj-multi-file-upload__input',
             label: {
               text: "Upload files",
@@ -62,7 +62,7 @@
       e.preventDefault();
 
       $('.moj-multi-file-upload__filename').each(function() {
-        $('<input name="statement-supporting-docs" type="checkbox" value="'+ $(this).text() +'" checked="true" style="display: none">').insertBefore('.govuk-heading-l');
+        $('<input name="statement-supporting-docs-b" type="checkbox" value="'+ $(this).text() +'" checked="true" style="display: none">').insertBefore('.govuk-heading-l');
       });
 
       $(this).unbind('submit').submit();
