--- a/app/views/enforcement-statement/v1/update/reasons-b.html
+++ b/app/views/enforcement-statement/v1/update/reasons-b.html
@@ -10,28 +10,31 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-l">
+        Ground B reasons
+      </h1>
+
+      {{ govukInsetText({
+        html: 'The alleged breach of planning permission has not happened.'
+      }) }}
+
+      <p>You do not need to repeat the local planning authority&rsquo;s reasons for issuing the enforcement notice.</p>
+
+      <p>You can upload documents to support your statement later.</p>
+    </div>
+
+    <div class="govuk-grid-column-three-quarters">
       <form method="post">
-        <h1 class="govuk-heading-l">
-          Ground B reasons
-        </h1>
-
-        {{ govukInsetText({
-          html: 'The alleged breach of planning permission has not happened.'
-        }) }}
-
-        <p>You do not need to repeat the local planning authority&rsquo;s reasons for issuing the enforcement notice.</p>
-
-        <p>You can upload documents to support your statement later.</p>
 
         {{ govukCharacterCount({
           name: 'statement-ground-b',
           id: 'statement-ground-b',
           value: data['statement-ground-b'],
-          maxwords: '3000',
-          rows: 10,
+          maxwords: '1000',
+          rows: 15,
           label: {
             html: 'What are your reasons for choosing Ground B?',
-            classes: 'govuk-label--m govuk-!-margin-top-8',
+            classes: 'govuk-label--m govuk-!-margin-top-6',
             isPageHeading: false
           }
         }) }}
