--- a/app/views/enforcement-statement/v1/update/reasons-c.html
+++ b/app/views/enforcement-statement/v1/update/reasons-c.html
@@ -10,28 +10,31 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-l">
+        Ground C reasons
+      </h1>
+
+      {{ govukInsetText({
+        html: 'The alleged breach does not require planning permission.'
+      }) }}
+
+      <p>You do not need to repeat the local planning authority&rsquo;s reasons for issuing the enforcement notice.</p>
+
+      <p>You can upload documents to support your statement later.</p>
+    </div>
+
+    <div class="govuk-grid-column-three-quarters">
       <form method="post">
-        <h1 class="govuk-heading-l">
-          Ground C reasons
-        </h1>
-
-        {{ govukInsetText({
-          html: 'The alleged breach does not require planning permission.'
-        }) }}
-
-        <p>You do not need to repeat the local planning authority&rsquo;s reasons for issuing the enforcement notice.</p>
-
-        <p>You can upload documents to support your statement later.</p>
 
         {{ govukCharacterCount({
           name: 'statement-ground-c',
           id: 'statement-ground-c',
           value: data['statement-ground-c'],
-          maxwords: '3000',
-          rows: 10,
+          maxwords: '1000',
+          rows: 15,
           label: {
             html: 'What are your reasons for choosing Ground C?',
-            classes: 'govuk-label--m govuk-!-margin-top-8',
+            classes: 'govuk-label--m govuk-!-margin-top-6',
             isPageHeading: false
           }
         }) }}
