Removed test playback

--- a/app/views/enforcement-statement/v1/update/index.html
+++ b/app/views/enforcement-statement/v1/update/index.html
@@ -14,7 +14,7 @@
         Update your appeal statement
       </h1>
 
-      <p>{{data['cya'] or 'no'}} You can change your grounds of appeal (apart from ground A), and add other reasons, comments and documents to support your appeal.</p>
+      <p>You can change your grounds of appeal (apart from ground A), and add other reasons, comments and documents to support your appeal.</p>
 
       {{ govukInsetText({
         html: 'Your deadline to make changes to your appeal statement is 11.59pm on Monday '+ 35 | daysInFuture
