--- a/app/views/enforcement/v5/grounds/groundB.html
+++ b/app/views/enforcement/v5/grounds/groundB.html
@@ -114,7 +114,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
