--- a/app/views/enforcement/v5/appeal-site/health-and-safety-issues.html
+++ b/app/views/enforcement/v5/appeal-site/health-and-safety-issues.html
@@ -98,7 +98,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
