--- a/app/views/enforcement/v5/appeal-site/your-interest.html
+++ b/app/views/enforcement/v5/appeal-site/your-interest.html
@@ -49,7 +49,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
