--- a/app/views/enforcement/v5/grounds/groundC.html
+++ b/app/views/enforcement/v5/grounds/groundC.html
@@ -107,7 +107,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
