--- a/app/views/enforcement/v5/named-on-notice/named-on-notice.html
+++ b/app/views/enforcement/v5/named-on-notice/named-on-notice.html
@@ -65,7 +65,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
