--- a/app/views/enforcement/v5/named-on-notice/person-name.html
+++ b/app/views/enforcement/v5/named-on-notice/person-name.html
@@ -67,7 +67,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
