--- a/app/views/enforcement/v5/procedure/inquiry-witnesses.html
+++ b/app/views/enforcement/v5/procedure/inquiry-witnesses.html
@@ -52,7 +52,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
