--- a/app/views/enforcement/v5/procedure/procedure.html
+++ b/app/views/enforcement/v5/procedure/procedure.html
@@ -78,7 +78,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
