--- a/app/views/enforcement/v5/task-list.html
+++ b/app/views/enforcement/v5/task-list.html
@@ -189,7 +189,7 @@
       </div>
 
       {{ govukButton({
-        href: "",
+        href: "appeal-saved",
         text: "Save and come back later",
         classes: "govuk-button--secondary"
       }) }}
