--- a/app/views/enforcement/v5/upload/enforcement-notice.html
+++ b/app/views/enforcement/v5/upload/enforcement-notice.html
@@ -72,7 +72,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
