--- a/app/views/enforcement/v5/upload/obligation-not-started.html
+++ b/app/views/enforcement/v5/upload/obligation-not-started.html
@@ -46,7 +46,7 @@
         }) }}
 
         {{ govukButton({
-          href: "",
+          href: "../appeal-saved",
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
