Removed cancel link for statement

--- a/app/views/enforcement-statement/v1/update/index.html
+++ b/app/views/enforcement-statement/v1/update/index.html
@@ -152,7 +152,7 @@
         }) }}
       </div>
 
-      <p><a class="delete-link" href="cancel">Cancel statement changes</a></p>
+      {# <p><a class="delete-link" href="cancel">Cancel statement changes</a></p> #}
 
     </div>
   </div>
