--- a/app/views/enforcement-listed-building/v1/procedure/hearing.html
+++ b/app/views/enforcement-listed-building/v1/procedure/hearing.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="endprocedure" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Tell us how you would prefer us to decide your appeal
@@ -54,7 +54,7 @@
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
-        
+
       </div>
 
     </form>
