--- a/app/views/enforcement-listed-building/v1/grounds/application-decision-date.html
+++ b/app/views/enforcement-listed-building/v1/grounds/application-decision-date.html
@@ -24,11 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      {% if data['grounds-1'] %}
-        <form action="fees" method="post">
-      {% else %}
-        <form action="/endgrounds" method="post">
-      {% endif %}
+      <form method="post">
 
         <span class="govuk-caption-l">
           Tell us about the appeal site
