--- a/app/views/enforcement-listed-building/v1/grounds/application.html
+++ b/app/views/enforcement-listed-building/v1/grounds/application.html
@@ -1,5 +1,4 @@
 <!-- needs page ref -->
-<!-- {% set pageref = "BYS-002" %} -->
 
 {% extends "layout.html" %}
 
@@ -27,7 +26,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/applicationmade-v5" method="post">
+    <form method="post">
 
       <span class="govuk-caption-l">
         Choose your grounds of appeal
