--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@ service-start{% extends "layout.html" %}
 
         <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default">
 
-          <!-- enforcement -->
+          <!-- listed building enforcement -->
           <div class="govuk-accordion__section">
             <div class="govuk-accordion__section-header">
               <h2 class="govuk-accordion__section-heading">
@@ -105,7 +105,20 @@ service-start{% extends "layout.html" %}
                       text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
-                      Version 5 - simple
+                      Enforcement appeal statement
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li><a href="/enforcement-statement/v1/appeal-submitted-email">Email: Appeal submitted</a></li>
+                    </ul>
+                  </div>
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
+                    }) }}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Version 5 - text for each ground
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li><a href="/enforcement/v5/skip/appeal-start">Before you continue</a></li>
@@ -119,7 +132,8 @@ service-start{% extends "layout.html" %}
                       text: "WIP"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
-                      BYS version 12 + enforcement version 4
+                      BYS version 12<br>
+                      Enforcement version 4 (BK version)
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <!-- <li><a href="/before-you-start/v11">Before you start</a></li> -->
